2010-09-29  Julien Danjou  <julien@danjou.info>

	* gnus-util.el (gnus-icompleting-read): Require iswitchb. Fix history
	computing.
	(gnus-ido-completing-read): Require ido.

2010-09-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-registry.el: Don't prompt on load, which makes it impossible to
	build Gnus.

	* nnimap.el (nnimap-insert-partial-structure): Be way more permissive
	when interpreting the structures.
	(nnimap-request-accept-article): Add \r\n to the lines to make this
	work with Cyrus.

	* nnregistry.el: Added.

	* nndraft.el (nndraft-request-expire-articles): Use the group name
	instead if "nndraft".  Fix found by Nils Ackermann.

2010-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-codepage-iso-8859-list, mm-charset-eval-alist)
	(mm-mime-charset)
	* rfc2047.el (rfc2047-syntax-table)
	* utf7.el (utf7-utf-16-coding-system): Comment fix.

	* nnrss.el (nnrss-read-server-data, nnrss-read-group-data): Use `load'
	rather than `insert-file-contents' and `eval-region'.

	* pgg.el (pgg-run-at-time-1): Define it for XEmacs only; fix if/else
	construction.

	* smime-ldap.el (smime-ldap-search): Remove Emacs 21 compatible code.

	* time-date.el: No need to require cl for Emacs 21.

2010-09-29  Julien Danjou  <julien@danjou.info>

	* gnus-gravatar.el (gnus-gravatar-properties): Add this properties in
	replacement of `gnus-gravatar-relief' to mimic
	`gnus-faces-properties-alist'.
	Add :version property.

2010-09-28  Florian Ragwitz  <rafl@debian.org>

	* gnus-util.el (gnus-use-ido): Removed.
	(gnus-std-completing-read): Add wrapper around completing-read.
	(gnus-icompleting-read): Add wrapper around ibuffer-read-buffer.
	(gnus-ido-completing-read): Add wrapper around ido-completing-read.
	(gnus-completing-read-function): Add to chose from the above completion
	functions or to provide a custom one.
	(gnus-completing-read): Use the completing-read function configured
	with gnus-completing-read-function.
