@@ -509,14 +509,15 @@ textual parts.")
     t))
 
 (defun nnimap-insert-partial-structure (structure parts &optional subp)
-  (let ((type (car (last structure 4)))
-	(boundary (let ((bstruc structure))
-		    (while (consp (car bstruc))
-		      (pop bstruc))
-		    (setq bstruc (car (cdr bstruc)))
-		    (and (stringp (car bstruc))
-			 (string= (downcase (car bstruc)) "boundary")
-			 (cadr bstruc)))))
+  (let (type boundary)
+    (let ((bstruc structure))
+      (while (consp (car bstruc))
+	(pop bstruc))
+      (setq type (car bstruc))
+      (setq bstruc (car (cdr bstruc)))
+      (when (and (stringp (car bstruc))
+		 (string= (downcase (car bstruc)) "boundary"))
+	(setq boundary (cadr bstruc))))
     (when subp
       (insert (format "Content-type: multipart/%s; boundary=%S\n\n"
 		      (downcase type) boundary)))
